src/jminusminus/Parser.java
// Copyright 2012- Bill Campbell, Swami Iyer and Bahar Akbal-Delibas
// Thomas

package jminusminus;

import java.sql.Array;
import java.util.ArrayList;

import static jminusminus.TokenKind.*;

/**
 * A recursive descent parser that, given a lexical analyzer (a LookaheadScanner), parses a j--
 * compilation unit (program file), taking tokens from the LookaheadScanner, and produces an
 * abstract syntax tree (AST) for it.
 */
public class Parser {
    // The lexical analyzer with which tokens are scanned.
    private LookaheadScanner scanner;

    // Whether a parser error has been found.
    private boolean isInError;

    // Whether we have recovered from a parser error.
    private boolean isRecovered;

    /**
     * Constructs a parser from the given lexical analyzer.
     *
     * @param scanner the lexical analyzer with which tokens are scanned.
     */
    public Parser(LookaheadScanner scanner) {
        this.scanner = scanner;
        isInError = false;
        isRecovered = true;

        // Prime the pump.
        scanner.next();
    }

    /**
     * Returns true if a parser error has occurred up to now, and false otherwise.
     *
     * @return true if a parser error has occurred up to now, and false otherwise.
     */
    public boolean errorHasOccurred() {
        return isInError;
    }

    /**
     * Parses a compilation unit (a program file) and returns an AST for it.
     *
     * <pre>
     *     compilationUnit ::= [ PACKAGE qualifiedIdentifier SEMI ]
     *                         { IMPORT  qualifiedIdentifier SEMI }
     *                         { typeDeclaration }
     *                         EOF
     * </pre>
     *
     * @return an AST for a compilation unit.
     */
    public JCompilationUnit compilationUnit() {
        int line = scanner.token().line();
        String fileName = scanner.fileName();
        TypeName packageName = null;
        if (have(PACKAGE)) {
            packageName = qualifiedIdentifier();
            mustBe(SEMI);
        }
        ArrayList<TypeName> imports = new ArrayList<TypeName>();
        while (have(IMPORT)) {
            imports.add(qualifiedIdentifier());
            mustBe(SEMI);
        }
        ArrayList<JAST> typeDeclarations = new ArrayList<JAST>();
        while (!see(EOF)) {
            JAST typeDeclaration = typeDeclaration();
            if (typeDeclaration != null) {
                typeDeclarations.add(typeDeclaration);
            }
        }
        mustBe(EOF);
        return new JCompilationUnit(fileName, line, packageName, imports, typeDeclarations);
    }

    /**
     * Parses and returns a qualified identifier.
     *
     * <pre>
     *   qualifiedIdentifier ::= IDENTIFIER { DOT IDENTIFIER }
     * </pre>
     *
     * @return a qualified identifier.
     */
    private TypeName qualifiedIdentifier() {
        int line = scanner.token().line();
        mustBe(IDENTIFIER);
        String qualifiedIdentifier = scanner.previousToken().image();
        while (have(DOT)) {
            mustBe(IDENTIFIER);
            qualifiedIdentifier += "." + scanner.previousToken().image();
        }
        return new TypeName(line, qualifiedIdentifier);
    }

    /**
     * Parses a type declaration and returns an AST for it.
     *
     * <pre>
     *   typeDeclaration ::=  modifiers ( classDeclaration | interfaceDeclaration )
     * </pre>
     *
     * @return an AST for a type declaration.
     */
    private JAST typeDeclaration() {
        ArrayList<String> mods = modifiers();
        if (see(CLASS)) {
            return classDeclaration(mods);
        } else {
            return interfaceDeclaration(mods);
        }
    }

    /**
     * Parses and returns a list of modifiers.
     *
     * <pre>
     *   modifiers ::= { ABSTRACT | PRIVATE | PROTECTED | PUBLIC | STATIC }
     * </pre>
     *
     * @return a list of modifiers.
     */
    private ArrayList<String> modifiers() {
        ArrayList<String> mods = new ArrayList<String>();
        boolean scannedPUBLIC = false;
        boolean scannedPROTECTED = false;
        boolean scannedPRIVATE = false;
        boolean scannedSTATIC = false;
        boolean scannedABSTRACT = false;
        boolean more = true;
        while (more) {
            if (have(ABSTRACT)) {
                mods.add("abstract");
                if (scannedABSTRACT) {
                    reportParserError("Repeated modifier: abstract");
                }
                scannedABSTRACT = true;
            } else if (have(PRIVATE)) {
                mods.add("private");
                if (scannedPRIVATE) {
                    reportParserError("Repeated modifier: private");
                }
                if (scannedPUBLIC || scannedPROTECTED) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPRIVATE = true;
            } else if (have(PROTECTED)) {
                mods.add("protected");
                if (scannedPROTECTED) {
                    reportParserError("Repeated modifier: protected");
                }
                if (scannedPUBLIC || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPROTECTED = true;
            } else if (have(PUBLIC)) {
                mods.add("public");
                if (scannedPUBLIC) {
                    reportParserError("Repeated modifier: public");
                }
                if (scannedPROTECTED || scannedPRIVATE) {
                    reportParserError("Access conflict in modifiers");
                }
                scannedPUBLIC = true;
            } else if (have(STATIC)) {
                mods.add("static");
                if (scannedSTATIC) {
                    reportParserError("Repeated modifier: static");
                }
                scannedSTATIC = true;
            } else if (have(ABSTRACT)) {
                mods.add("abstract");
                if (scannedABSTRACT) {
                    reportParserError("Repeated modifier: abstract");
                }
                scannedABSTRACT = true;
            } else {
                more = false;
            }
        }
        return mods;
    }

    /**
     * Parses a class declaration and returns an AST for it.
     *
     * <pre>
     *   classDeclaration ::= CLASS IDENTIFIER [ EXTENDS qualifiedIdentifier ]
     *                        [ IMPLEMENTS  qualifiedIdentifier { COMMA  qualifiedIdentifier }
     *                        classBody
     * </pre>
     *
     * @param mods the class modifiers.
     * @return an AST for a class declaration.
     */
    private JClassDeclaration classDeclaration(ArrayList<String> mods) {
        int line = scanner.token().line();
        mustBe(CLASS);
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        Type superClass;
        // [ EXTENDS qualifiedIdentifier ]
        if (have(EXTENDS)) {
            superClass = qualifiedIdentifier();
        } else {
            superClass = Type.OBJECT;
        }

        // [ IMPLEMENTS  qualifiedIdentifier { COMMA  qualifiedIdentifier }
        ArrayList<TypeName> superInterfaces = null;
        if (have(IMPLEMENTS)) {
            superInterfaces = new ArrayList<TypeName>();
            superInterfaces.add(qualifiedIdentifier());

            while (have(COMMA)) {
                superInterfaces.add(qualifiedIdentifier());
            }
        }
        return new JClassDeclaration(line, mods, name, superClass, superInterfaces, classBody());
    }

    /**
     * Parses a interface declaration and returns an AST for it.
     *
     * <pre>
     *    interfaceDeclaration ::= INTERFACE  IDENTIFIER
     *                             [ EXTENDS  qualifiedIdentifier { COMMA  qualifiedIdentifier } ]
     *                             interfaceBody
     * </pre>
     *
     * @param mods the interface modifiers.
     * @return an AST for a interface declaration.
     */
    private JInterfaceDeclaration interfaceDeclaration(ArrayList<String> mods) {
        int line = scanner.token().line();
        mustBe(INTERFACE);
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();

        // [ EXTENDS  qualifiedIdentifier { COMMA  qualifiedIdentifier } ]
        ArrayList<TypeName> superInterfaces = null;
        if (have(EXTENDS)) {
            superInterfaces = new ArrayList<TypeName>();
            superInterfaces.add(qualifiedIdentifier());
            while(have(COMMA)) {
                superInterfaces.add(qualifiedIdentifier());
            }
        }

        return new JInterfaceDeclaration(line, mods, name, superInterfaces, interfaceBody());
    }

    /**
     * Parses a interface body and returns an ArrayList.
     *
     * <pre>
     *     interfaceBody  ::=  LCURLY { modifiers  interfaceMemberDecl } RCURLY
     * </pre>
     *
     * @return an ArrayList of interface body.
     */
    private ArrayList<JMember> interfaceBody() {
        ArrayList<JMember> members = new ArrayList<JMember>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            ArrayList<String> mods = modifiers();
            members.add(interfaceMemberDecl(mods));
        }
        mustBe(RCURLY);
        return members;
    }


    /**
     * Parses a class body and returns a list of members in the body.
     *
     * <pre>
     *   classBody ::= LCURLY { modifiers memberDecl } RCURLY
     * </pre>
     *
     * @return a list of members in the class body.
     */
    private ArrayList<JMember> classBody() {
        ArrayList<JMember> members = new ArrayList<JMember>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            ArrayList<String> mods = modifiers();
            members.add(memberDecl(mods));
        }
        mustBe(RCURLY);
        return members;
    }

    /**
     * Parses an interface member declaration and returns an AST for it.
     *
     * <pre>
     *    interfaceMemberDecl  ::= ( VOID | type ) IDENTIFIER  formalParameters
     *                             [ THROWS  qualifiedIdentifier { COMMA  qualifiedIdentifier } ] SEMI
     *                             | type  variableDeclarators  SEMI
     * </pre>
     *
     * @param mods the interface member modifiers.
     * @return an AST for a interface member declaration.
     */
    private JMember interfaceMemberDecl(ArrayList<String> mods) {
        int line = scanner.token().line();

        // Implicit modifiers for interface
        if (mods == null)
            mods = new ArrayList<>();
        mods.add("abstract");
        mods.add("public");

        JMember interfaceMemberDecl = null;

        // ( VOID | type ) IDENTIFIER formalParameters
        // [ THROWS  qualifiedIdentifier { COMMA  qualifiedIdentifier } ] SEMI
        Type type = null;
        if (have(VOID)) {
            // A void method.
            type = Type.VOID;
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters();
            // [ THROWS qualifiedIdentifier { COMMA qualifiedIdentifier } ]
            ArrayList<TypeName> exceptions = null;
            if (have(THROWS)) {
                exceptions = new ArrayList<TypeName>();
                TypeName typeName = qualifiedIdentifier();
                exceptions.add(typeName);

                while (have(COMMA)) {
                    exceptions.add(qualifiedIdentifier());
                }
            }

            JBlock body = have(SEMI) ? null : block();
            interfaceMemberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, body);
        } else {
            type = type();
            if (seeIdentLParen()) {
                // A non void method.
                mustBe(IDENTIFIER);
                String name = scanner.previousToken().image();
                ArrayList<JFormalParameter> params = formalParameters();
                // [ THROWS qualifiedIdentifier { COMMA qualifiedIdentifier } ]
                ArrayList<TypeName> exceptions = null;
                if (have(THROWS)) {
                    exceptions = new ArrayList<TypeName>();
                    TypeName typeName = qualifiedIdentifier();
                    exceptions.add(typeName);

                    while (have(COMMA)) {
                        exceptions.add(qualifiedIdentifier());
                    }
                }
                JBlock body = have(SEMI) ? null : block();
                interfaceMemberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, body);
            } else {
                // A field.
                interfaceMemberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
                mustBe(SEMI);
            }
        }

        return interfaceMemberDecl;
    }

    /**
     * Parses a member declaration and returns an AST for it.
     *
     * <pre>
     *   memberDecl ::= IDENTIFIER formalParameters [ THROWS qualifiedIdentifier { COMMA qualifiedIdentifier } ] block
     *                | ( VOID | type ) IDENTIFIER formalParameters ( block | SEMI )
     *                | type variableDeclarators SEMI
     * </pre>
     *
     * @param mods the class member modifiers.
     * @return an AST for a member declaration.
     */
    private JMember memberDecl(ArrayList<String> mods) {
        int line = scanner.token().line();
        JMember memberDecl = null;
        // IDENTIFIER formalParameters [ THROWS qualifiedIdentifier
        // { COMMA qualifiedIdentifier } ] block
        if (seeIdentLParen()) {
            // A constructor.
            mustBe(IDENTIFIER);
            String name = scanner.previousToken().image();
            ArrayList<JFormalParameter> params = formalParameters();

            // [ THROWS qualifiedIdentifier { COMMA qualifiedIdentifier } ]
            ArrayList<TypeName> exceptions = null;
            if (have(THROWS)) {
                exceptions = new ArrayList<TypeName>();
                TypeName typeName = qualifiedIdentifier();
                exceptions.add(typeName);

                while(have(COMMA)) {
                    exceptions.add(qualifiedIdentifier());
                }
            }

            JBlock body = block();
            memberDecl = new JConstructorDeclaration(line, mods, name, params, exceptions, body);
        } else {
            // ( VOID | type ) IDENTIFIER formalParameters
            // [ THROWS  qualifiedIdentifier { COMMA  qualifiedIdentifier } ] ( block | SEMI )
            Type type = null;
            if (have(VOID)) {
                // A void method.
                type = Type.VOID;
                mustBe(IDENTIFIER);
                String name = scanner.previousToken().image();
                ArrayList<JFormalParameter> params = formalParameters();
                // [ THROWS qualifiedIdentifier { COMMA qualifiedIdentifier } ]
                ArrayList<TypeName> exceptions = null;
                if (have(THROWS)) {
                    exceptions = new ArrayList<TypeName>();
                    TypeName typeName = qualifiedIdentifier();
                    exceptions.add(typeName);

                    while(have(COMMA)) {
                        exceptions.add(qualifiedIdentifier());
                    }
                }

                JBlock body = have(SEMI) ? null : block();
                memberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, body);
            } else {
                type = type();
                if (seeIdentLParen()) {
                    // A non void method.
                    mustBe(IDENTIFIER);
                    String name = scanner.previousToken().image();
                    ArrayList<JFormalParameter> params = formalParameters();
                    // [ THROWS qualifiedIdentifier { COMMA qualifiedIdentifier } ]
                    ArrayList<TypeName> exceptions = null;
                    if (have(THROWS)) {
                        exceptions = new ArrayList<TypeName>();
                        TypeName typeName = qualifiedIdentifier();
                        exceptions.add(typeName);

                        while(have(COMMA)) {
                            exceptions.add(qualifiedIdentifier());
                        }
                    }
                    JBlock body = have(SEMI) ? null : block();
                    memberDecl = new JMethodDeclaration(line, mods, name, type, params, exceptions, body);
                } else {
                    // A field.
                    memberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
                    mustBe(SEMI);
                }
            }
        }
        return memberDecl;
    }

    /**
     * Parses a block and returns an AST for it.
     *
     * <pre>
     *   block ::= LCURLY { blockStatement } RCURLY
     * </pre>
     *
     * @return an AST for a block.
     */
    private JBlock block() {
        int line = scanner.token().line();
        ArrayList<JStatement> statements = new ArrayList<JStatement>();
        mustBe(LCURLY);
        while (!see(RCURLY) && !see(EOF)) {
            statements.add(blockStatement());
        }
        mustBe(RCURLY);
        return new JBlock(line, statements);
    }

    /**
     * Parses a block statement and returns an AST for it.
     *
     * <pre>
     *   blockStatement ::= localVariableDeclarationStatement
     *                    | statement
     * </pre>
     *
     * @return an AST for a block statement.
     */
    private JStatement blockStatement() {
        if (seeLocalVariableDeclaration()) {
            return localVariableDeclarationStatement();
        } else {
            return statement();
        }
    }

    /**
     * Parses a statement and returns an AST for it.
     *
     * <pre>
     *   statement  ::=  block
     * 	            | BREAK  SEMI
     * 	            | CONTINUE  SEMI
     *              | DO  statement  WHILE  parExpression  SEMI
     *              | FOR  LPAREN [ forInit ] SEMI [ expression ] SEMI [ forUpdate ] RPAREN  statement
     *              | IF  parExpression  statement [ ELSE  statement ]
     *              | RETURN [ expression ] SEMI
     *              | SEMI
     *              | SWITCH  parExpression  LCURLY { switchBlockStatementGroup } RCURLY
     *              | THROW  expression  SEMI
     *              | TRY  block { CATCH  LPAREN  formalParameter  RPAREN  block } [ FINALLY  block ]
     *              | WHILE  parExpression  statement
     *              | statementExpression  SEMI
     * </pre>
     *
     * @return an AST for a statement.
     */
    private JStatement statement() {
        int line = scanner.token().line();
        if (see(LCURLY)) {
            return block();

        }
        // BREAK  SEMI
        else if (have(BREAK)) {
            mustBe(SEMI);
            return new JBreakStatement(line);

        }
        // CONTINUE  SEMI
        else if (have(CONTINUE)) {
            mustBe(SEMI);
            return new JContinueStatement(line);

        }
        // DO  statement  WHILE  parExpression  SEMI
        else if (have(DO)) {
            JStatement body = statement();
            mustBe(WHILE);
            JExpression condition = parExpression();
            mustBe(SEMI);
            return new JDoStatement(line, body, condition);
        }
        // FOR  LPAREN [ forInit ] SEMI [ expression ] SEMI [ forUpdate ] RPAREN  statement
        else if (have(FOR)) {
            mustBe(LPAREN);
            ArrayList<JStatement> init = null;
            if (!see(SEMI)) { // if the next char is not ; , then there is init
                init = forInit();
            }
            mustBe(SEMI);
            JExpression condition = null;
            if (!see(SEMI)) { // if the next char is not ; , then there is expression
                condition = expression();
            }
            mustBe(SEMI);
            ArrayList<JStatement> update = null;
            if (!see(RPAREN)) { // if the next char is not ) , then there is expression
                update = forUpdate();
            }
            mustBe(RPAREN);
            JStatement body = statement();
            return new JForStatement(line, init, condition, update, body);
        }
        // IF  parExpression  statement [ ELSE  statement ]
        else if (have(IF)) {
            JExpression test = parExpression();
            JStatement consequent = statement();
            JStatement alternate = have(ELSE) ? statement() : null;
            return new JIfStatement(line, test, consequent, alternate);

        }
        else if (have(RETURN)) {
            if (have(SEMI)) {
                return new JReturnStatement(line, null);
            } else {
                JExpression expr = expression();
                mustBe(SEMI);
                return new JReturnStatement(line, expr);
            }
        } else if (have(SEMI)) {
            return new JEmptyStatement(line);

        }
        // SWITCH  parExpression  LCURLY { switchBlockStatementGroup } RCURLY
        else if (have(SWITCH)) {
            JExpression condition = parExpression();
            mustBe(LCURLY);
            ArrayList<SwitchStatementGroup> stmtGroup = new ArrayList<>();
            while(!see(RCURLY) && !see(EOF)) {
                stmtGroup.add(switchBlockStatementGroup());
            }
            mustBe(RCURLY);
            return new JSwitchStatement(line, condition, stmtGroup);

        }
        // THROW  expression  SEMI
        else if (have(THROW)) {
            JExpression expr = expression();
            mustBe(SEMI);
            return new JThrowStatement(line, expr);

        }
        //  TRY  block { CATCH  LPAREN  formalParameter  RPAREN  block } [ FINALLY  block ]
        else if (have(TRY)) {
            JBlock tryBlock = block();

            // catch portion
            ArrayList<JFormalParameter> parameters = new ArrayList<JFormalParameter>();
            ArrayList<JBlock> catchBlocks = new ArrayList<JBlock>();
            do { // { CATCH LPAREN formalPara RPAREN block }
                mustBe(CATCH);
                mustBe(LPAREN);
                JFormalParameter formalParameter = formalParameter();
                mustBe(RPAREN);
                JBlock catchBlock = block();

                parameters.add(formalParameter);
                catchBlocks.add(catchBlock);
            } while(see(CATCH));

            JBlock finallyBlock = null;
            if (have(FINALLY)) { // [ FINALLY block ]
                finallyBlock = block();
            }
            return new JTryStatement(line, tryBlock, parameters, catchBlocks, finallyBlock);

        }
        // WHILE  parExpression  statement
        else if (have(WHILE)) {
            JExpression test = parExpression();
            JStatement statement = statement();
            return new JWhileStatement(line, test, statement);

        } else {
            // Must be a statementExpression.
            JStatement statement = statementExpression();
            mustBe(SEMI);
            return statement;
        }
    }

    /**
     * Parses and returns a list of formal parameters.
     *
     * <pre>
     *   formalParameters ::= LPAREN [ formalParameter { COMMA formalParameter } ] RPAREN
     * </pre>
     *
     * @return a list of formal parameters.
     */
    private ArrayList<JFormalParameter> formalParameters() {
        ArrayList<JFormalParameter> parameters = new ArrayList<JFormalParameter>();
        mustBe(LPAREN);
        if (have(RPAREN)) {
            return parameters;
        }
        do {
            parameters.add(formalParameter());
        } while (have(COMMA));
        mustBe(RPAREN);
        return parameters;
    }

    /**
     * Parses a formal parameter and returns an AST for it.
     *
     * <pre>
     *   formalParameter ::= type IDENTIFIER
     * </pre>
     *
     * @return an AST for a formal parameter.
     */
    private JFormalParameter formalParameter() {
        int line = scanner.token().line();
        Type type = type();
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        return new JFormalParameter(line, name, type);
    }

    /**
     * Parses a parenthesized expression and returns an AST for it.
     *
     * <pre>
     *   parExpression ::= LPAREN expression RPAREN
     * </pre>
     *
     * @return an AST for a parenthesized expression.
     */
    private JExpression parExpression() {
        mustBe(LPAREN);
        JExpression expr = expression();
        mustBe(RPAREN);
        return expr;
    }

    /**
     * forInit statement and returns a list of expressions.
     *
     * <pre>
     *   forInit ::= statementExpression {, statementExpression}
     *               | type variableDeclarators
     * </pre>
     *
     * @return a list of expressions.
     */
    private ArrayList<JStatement> forInit() {
        ArrayList<JStatement> statements = new ArrayList<JStatement>();
        // If it's a list of variables declarations
        if (seeBasicType() || seeReferenceType()) {
            int line = scanner.token().line();
            Type type = type();
            ArrayList<JVariableDeclarator> declarators = variableDeclarators(type);
            statements.add(new JVariableDeclaration(line, declarators));
        } else { // else it's a list of statements
            do {
                statements.add(statementExpression());
            } while (have(COMMA));
        }
        return statements;
    }

    /**
     * forUpdate statement and returns a list of expressions.
     *
     * <pre>
     *   forUpdate ::= statementExpression { COMMA  statementExpression }
     * </pre>
     *
     * @return a list of expressions.
     */
    private ArrayList<JStatement> forUpdate() {
        ArrayList<JStatement> statements = new ArrayList<JStatement>();
        do {
            statements.add(statementExpression());
        } while (have(COMMA));
        return statements;
    }

    /**
     * SwitchStatementGroup returns a group of switch case and block
     *
     * <pre>
     *    switchBlockStatementGroup ::= switchLabel { switchLabel } { blockStatement }
     * </pre>
     *
     * @return a list of expressions.
     */
    private SwitchStatementGroup switchBlockStatementGroup() {
        ArrayList<JExpression> switchLabels = new ArrayList<JExpression>();
        ArrayList<JStatement> blockStatements = new ArrayList<JStatement>();
        do {
            switchLabels.add(switchLabel());
        } while(see(CASE) || see(DEFLT)); // 1 or more occurrences

        while(!see(CASE) && !see(DEFLT) && !see(RCURLY)) { // 0 or more occurrences
            blockStatements.add(blockStatement());
        }
        return new SwitchStatementGroup(switchLabels, blockStatements);
    }

    /**
     * switchLabel returns an JExpression of each switch label.
     *
     * <pre>
     *    switchLabel ::= CASE  expression  COLON
     *                  | DEFLT  COLON
     * </pre>
     *
     * @return a list of expressions.
     */
    private JExpression switchLabel() {
        JExpression condition = null;
        if (have(CASE)) {
            condition = expression();
            mustBe(COLON);
        } else if (have(DEFLT)){
            mustBe(COLON);
        }
        return condition;
    }

    /**
     * Parses a local variable declaration statement and returns an AST for it.
     *
     * <pre>
     *   localVariableDeclarationStatement ::= type variableDeclarators SEMI
     * </pre>
     *
     * @return an AST for a local variable declaration statement.
     */
    private JVariableDeclaration localVariableDeclarationStatement() {
        int line = scanner.token().line();
        Type type = type();
        ArrayList<JVariableDeclarator> vdecls = variableDeclarators(type);
        mustBe(SEMI);
        return new JVariableDeclaration(line, vdecls);
    }

    /**
     * Parses and returns a list of variable declarators.
     *
     * <pre>
     *   variableDeclarators ::= variableDeclarator { COMMA variableDeclarator }
     * </pre>
     *
     * @param type type of the variables.
     * @return a list of variable declarators.
     */
    private ArrayList<JVariableDeclarator> variableDeclarators(Type type) {
        ArrayList<JVariableDeclarator> variableDeclarators = new ArrayList<JVariableDeclarator>();
        do {
            variableDeclarators.add(variableDeclarator(type));
        } while (have(COMMA));
        return variableDeclarators;
    }

    /**
     * Parses a variable declarator and returns an AST for it.
     *
     * <pre>
     *   variableDeclarator ::= IDENTIFIER [ ASSIGN variableInitializer ]
     * </pre>
     *
     * @param type type of the variable.
     * @return an AST for a variable declarator.
     */
    private JVariableDeclarator variableDeclarator(Type type) {
        int line = scanner.token().line();
        mustBe(IDENTIFIER);
        String name = scanner.previousToken().image();
        JExpression initial = have(ASSIGN) ? variableInitializer(type) : null;
        return new JVariableDeclarator(line, name, type, initial);
    }

    /**
     * Parses a variable initializer and returns an AST for it.
     *
     * <pre>
     *   variableInitializer ::= arrayInitializer | expression
     * </pre>
     *
     * @param type type of the variable.
     * @return an AST for a variable initializer.
     */
    private JExpression variableInitializer(Type type) {
        if (see(LCURLY)) {
            return arrayInitializer(type);
        }
        return expression();
    }

    /**
     * Parses an array initializer and returns an AST for it.
     *
     * <pre>
     *   arrayInitializer ::= LCURLY [ variableInitializer { COMMA variableInitializer }
     *                                 [ COMMA ] ] RCURLY
     * </pre>
     *
     * @param type type of the array.
     * @return an AST for an array initializer.
     */
    private JArrayInitializer arrayInitializer(Type type) {
        int line = scanner.token().line();
        ArrayList<JExpression> initials = new ArrayList<JExpression>();
        mustBe(LCURLY);
        if (have(RCURLY)) {
            return new JArrayInitializer(line, type, initials);
        }
        initials.add(variableInitializer(type.componentType()));
        while (have(COMMA)) {
            initials.add(see(RCURLY) ? null : variableInitializer(type.componentType()));
        }
        mustBe(RCURLY);
        return new JArrayInitializer(line, type, initials);
    }

    /**
     * Parses and returns a list of arguments.
     *
     * <pre>
     *   arguments ::= LPAREN [ expression { COMMA expression } ] RPAREN
     * </pre>
     *
     * @return a list of arguments.
     */
    private ArrayList<JExpression> arguments() {
        ArrayList<JExpression> args = new ArrayList<JExpression>();
        mustBe(LPAREN);
        if (have(RPAREN)) {
            return args;
        }
        do {
            args.add(expression());
        } while (have(COMMA));
        mustBe(RPAREN);
        return args;
    }

    /**
     * Parses and returns a type.
     *
     * <pre>
     *   type ::= referenceType | basicType
     * </pre>
     *
     * @return a type.
     */
    private Type type() {
        if (seeReferenceType()) {
            return referenceType();
        }
        return basicType();
    }

    /**
     * Parses and returns a basic type.
     *
     * <pre>
     *   basicType ::= BOOLEAN | CHAR | DOUBLE | INT | LONG
     * </pre>
     *
     * @return a basic type.
     */
    private Type basicType() {
        if (have(BOOLEAN)) {
            return Type.BOOLEAN;
        } else if (have(CHAR)) {
            return Type.CHAR;
        } else if (have(DOUBLE)) {
            return Type.DOUBLE;
        } else if (have(INT)) {
            return Type.INT;
        } else if (have(LONG)) {
            return Type.LONG;
        } else {
            reportParserError("Type sought where %s found", scanner.token().image());
            return Type.ANY;
        }
    }

    /**
     * Parses and returns a reference type.
     *
     * <pre>
     *   referenceType ::= basicType LBRACK RBRACK { LBRACK RBRACK }
     *                   | qualifiedIdentifier { LBRACK RBRACK }
     * </pre>
     *
     * @return a reference type.
     */
    private Type referenceType() {
        Type type = null;
        if (!see(IDENTIFIER)) {
            type = basicType();
            mustBe(LBRACK);
            mustBe(RBRACK);
            type = new ArrayTypeName(type);
        } else {
            type = qualifiedIdentifier();
        }
        while (seeDims()) {
            mustBe(LBRACK);
            mustBe(RBRACK);
            type = new ArrayTypeName(type);
        }
        return type;
    }

    /**
     * Parses a statement expression and returns an AST for it.
     *
     * <pre>
     *   statementExpression ::= expression
     * </pre>
     *
     * @return an AST for a statement expression.
     */
    private JStatement statementExpression() {
        int line = scanner.token().line();
        JExpression expr = expression();
        if (expr instanceof JAssignment
                || expr instanceof JPreIncrementOp
                || expr instanceof JPostDecrementOp
                || expr instanceof JMessageExpression
                || expr instanceof JSuperConstruction
                || expr instanceof JThisConstruction
                || expr instanceof JNewOp
                || expr instanceof JNewArrayOp
                || expr instanceof JPostIncrementOp
                || expr instanceof JPreDecrementOp) {
            // So as not to save on stack.
            expr.isStatementExpression = true;
        } else {
            reportParserError("Invalid statement expression; it does not have a side-effect");
        }
        return new JStatementExpression(line, expr);
    }

    /**
     * Parses an expression and returns an AST for it.
     *
     * <pre>
     *   expression ::= assignmentExpression
     * </pre>
     *
     * @return an AST for an expression.
     */
    private JExpression expression() {
        return assignmentExpression();
    }
